# old-RMGE

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  ROADMAP.md
examples/: clear_screen.rs  draw_triangle.rs  main.rs
src/: error.rs  event.rs  eventhandler.rs  fragment.glsl  geometry.rs  graphics.rs  halstate.rs  lib.rs  main.rs  vertex.glsl  window_state.rs
src/graphics/: fragment.glsl  gpu_buffer.rs  loadedimage.rs  mod.rs  vertex.glsl  vertex.rs
